--- a/product/src/main/res/values/strings.xml
+++ b/product/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="product_price">%s dollar</string>
+    <string name="product_rating">Rate: %.1f</string>
 </resources>
